# Blockchain

./: CMakeLists.txt  main.cpp
src/Core/: block.hpp  ledger.hpp  transaction.hpp  utils.hpp
src/Network/: client.hpp  server.hpp
